# ChekReg

./: .gitignore  README.md  chekreg.py  engine.py  pyproject.toml  requirements.txt  server.py  setup.sh
.github/workflows/: ci.yml
data/: sites.json
documentation/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  PLATFORMS.md  PRIVACY_SECURITY.md
scripts/: fetch_missing_links.py  merge_db.py
static/: docs.html  index.html  script.js  style.css  terms.html
tests/: test_engine.py
